--- a/src/components/Posts/Posts.module.css
+++ b/src/components/Posts/Posts.module.css
@@ -5,9 +5,10 @@
 }
 
 .posts button {
+  border: 1px solid var(--blue);
   margin: 0 auto;
   width: auto;
-  padding: 8px;
+  padding: 7px;
   align-items: center;
   gap: 8px;
 }
